validaciones formulario edit-usuario, estilos modal alert, estilos botones acciones

--- a/admin/views/productos.html
+++ b/admin/views/productos.html
@@ -1,19 +1,16 @@
-      <?php 
-        require_once('views/navigation.html');
-      ?>
       <div id="page-users" class="right-side">
         <div class="content">
           <div class="row">
             <div class="col-xs-12">
               <section class="panel">
                 <header class="panel-heading">
-                  <h3>Productos</h3>
+                  <h1>Productos</h1>
                   <div class="pull-right">
                     <ul class="files">
-                      <li><button class="btn btn-green" title="CVS"><i class="fa fa-file-text-o"></i></button></li>
-                      <li><button class="btn btn-green" title="Excel"><i class="fa fa-file-excel-o" ></i></button></li>
-                      <li><button class="btn btn-green" title="PDF"><i class="fa fa-file-pdf-o"></i></button></li>
-                      <li><button class="btn btn-green" title="Print"><i class="fa fa-print"></i></button></li>
+                      <li><button class="btn btn-red" title="CVS"><i class="fa fa-file-text-o"></i></button></li>
+                      <li><button class="btn btn-red" title="Excel"><i class="fa fa-file-excel-o" ></i></button></li>
+                      <li><button class="btn btn-red" title="PDF"><i class="fa fa-file-pdf-o"></i></button></li>
+                      <li><button class="btn btn-red" title="Print"><i class="fa fa-print"></i></button></li>
                     </ul>
                   </div>
                 </header>
@@ -57,6 +54,7 @@
                         <th class=" no-link last"><span class="nobr">Acción</span></th>
                       </tr>
                     </tfoot>
+                    <!--table.tbody-->
                     <tbody>
                       <!--row-->
                       <tr>
@@ -75,13 +73,14 @@
                         <td>{{stock}}</td>
                         <td>{{precio}}</td>
                         <td>
-                          <a href="index.php?ctrl=productos&action=view&id={{id}}"><i class="fa fa-eye"></i></a>
-                          <a href="index.php?ctrl=productos&action=view&id={{id}}"><i class="fa fa-pencil"></i></a>
-                          <a href="#"><i class="fa fa-trash-o"></i></a>
+                          <a href="index.php?ctrl=productos&action=view&id={{id}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
+                          <a href="index.php?ctrl=productos&action=view&id={{id}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
+                          <a href="#" class="btn btn-delete" id="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
                         </td>
                       </tr>
                       <!--.row-->
                     </tbody>
+                    <!--.table.tbody-->
                   </table>
                 </div>
                 <div class="panel-body">
