--- a/admin/views/modal-delete-usuario.html
+++ b/admin/views/modal-delete-usuario.html
@@ -1,16 +1,18 @@
     <div id="delete-item" class="modal fade" role="dialog">
       <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
+        <div class="modal-content alert alert-error">
+          <div class="modal-header ">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
             <h4 class="modal-title">Eliminar usuario</h4>
           </div>
           <div class="modal-body">
-            <h3>¿Deseas eliminar este usuario?</h3>
+            <h2 class="text-center"><i class="fa fa fa-trash fa-3x"></i></h2>
+            <h3 class="text-center">El usuario será eliminado definitivamente.</h3>
+
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-green" data-dismiss="modal">Ok</button>
-            <button type="button" class="btn btn-red" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-show" data-dismiss="modal"><i class="fa fa-check"></i> Aceptar</button>
+            <button type="button" class="btn btn-red" data-dismiss="modal"><i class="fa fa-ban"></i> Cancel</button>
           </div>
         </div>
       </div>
