--- a/css/buttons.css
+++ b/css/buttons.css
@@ -192,6 +192,153 @@ fieldset[disabled] .btn-dark.active {
 
 
 
+/* BTN-DELETE */
+
+.btn-delete { 
+  color: #FFFFFF; 
+  background-color: #FF6C60; 
+  border-color: #FF6C60; 
+} 
+ 
+.btn-delete:hover, 
+.btn-delete:focus, 
+.btn-delete:active, 
+.btn-delete.active, 
+.open .dropdown-toggle.btn-delete { 
+  color: #FFFFFF; 
+  background-color: #FF6C60; 
+  border-color: #FF6C60; 
+} 
+ 
+.btn-delete:active, 
+.btn-delete.active, 
+.open .dropdown-toggle.btn-delete { 
+  background-image: none; 
+} 
+ 
+.btn-delete.disabled, 
+.btn-delete[disabled], 
+fieldset[disabled] .btn-delete, 
+.btn-delete.disabled:hover, 
+.btn-delete[disabled]:hover, 
+fieldset[disabled] .btn-delete:hover, 
+.btn-delete.disabled:focus, 
+.btn-delete[disabled]:focus, 
+fieldset[disabled] .btn-delete:focus, 
+.btn-delete.disabled:active, 
+.btn-delete[disabled]:active, 
+fieldset[disabled] .btn-delete:active, 
+.btn-delete.disabled.active, 
+.btn-delete[disabled].active, 
+fieldset[disabled] .btn-delete.active { 
+  background-color: #FF6C60; 
+  border-color: #FF6C60; 
+} 
+ 
+.btn-delete .badge { 
+  color: #FF6C60; 
+  background-color: #FFFFFF; 
+}
+/* BTN-SHOW */
+
+.btn-show { 
+  color: #FFFFFF; 
+  background-color: #36BBA6; 
+  border-color: #36BBA6; 
+} 
+ 
+.btn-show:hover, 
+.btn-show:focus, 
+.btn-show:active, 
+.btn-show.active, 
+.open .dropdown-toggle.btn-show { 
+  color: #FFFFFF; 
+  background-color: #36BBA6; 
+  border-color: #36BBA6; 
+} 
+ 
+.btn-show:active, 
+.btn-show.active, 
+.open .dropdown-toggle.btn-show { 
+  background-image: none; 
+} 
+ 
+.btn-show.disabled, 
+.btn-show[disabled], 
+fieldset[disabled] .btn-show, 
+.btn-show.disabled:hover, 
+.btn-show[disabled]:hover, 
+fieldset[disabled] .btn-show:hover, 
+.btn-show.disabled:focus, 
+.btn-show[disabled]:focus, 
+fieldset[disabled] .btn-show:focus, 
+.btn-show.disabled:active, 
+.btn-show[disabled]:active, 
+fieldset[disabled] .btn-show:active, 
+.btn-show.disabled.active, 
+.btn-show[disabled].active, 
+fieldset[disabled] .btn-show.active { 
+  background-color: #36BBA6; 
+  border-color: #36BBA6; 
+} 
+ 
+.btn-show .badge { 
+  color: #36BBA6; 
+  background-color: #FFFFFF; 
+}
+
+/* BTN-EDIT */
+
+.btn-edit { 
+  color: #FFFFFF; 
+  background-color: #EDB92E; 
+  border-color: #EDB92E; 
+} 
+ 
+.btn-edit:hover, 
+.btn-edit:focus, 
+.btn-edit:active, 
+.btn-edit.active, 
+.open .dropdown-toggle.btn-edit { 
+  color: #FFFFFF; 
+  background-color: #EDB92e; 
+  border-color: #EDB92E; 
+} 
+ 
+.btn-edit:active, 
+.btn-edit.active, 
+.open .dropdown-toggle.btn-edit { 
+  background-image: none; 
+} 
+ 
+.btn-edit.disabled, 
+.btn-edit[disabled], 
+fieldset[disabled] .btn-edit, 
+.btn-edit.disabled:hover, 
+.btn-edit[disabled]:hover, 
+fieldset[disabled] .btn-edit:hover, 
+.btn-edit.disabled:focus, 
+.btn-edit[disabled]:focus, 
+fieldset[disabled] .btn-edit:focus, 
+.btn-edit.disabled:active, 
+.btn-edit[disabled]:active, 
+fieldset[disabled] .btn-edit:active, 
+.btn-edit.disabled.active, 
+.btn-edit[disabled].active, 
+fieldset[disabled] .btn-edit.active { 
+  background-color: #EDB92E; 
+  border-color: #EDB92E; 
+} 
+ 
+.btn-edit .badge { 
+  color: #EDB92E; 
+  background-color: #FFFFFF; 
+}
+
+
+
+
+
 
 /*
 //AMARILLO
@@ -208,4 +355,29 @@ VERDE
 #88C100
 
 AZUL
-#57c8f2
+#57c8f2*/
+
+
+.alert.alert-error {
+  background-color: #fdeaea !important;
+  color: #f00 !important;
+  border: 1px solid #f27b81 !important;
+}
+
+.alert.alert-success {
+  background-color: #edf6e5 !important;
+  color: #7a9659 !important;
+  border: 1px solid #9fc76f !important;
+}
+
+.alert.alert-info {
+  background-color: #e9f8ff !important;
+  color: #5d9fa9 !important;
+  border: 1px solid #75c7d3 !important;
+}
+
+.alert.alert-warning {
+  background-color: #fffee1 !important;
+  color: #daac50 !important;
+  border: 1px solid #f5c056 !important;
+}
