--- a/views/register.html
+++ b/views/register.html
@@ -12,7 +12,7 @@
         </div>
 
         <div  class="form-group">      
-          <label for="apellidos" class="control-label">Apellido <span class="required">*</span></label>
+          <label for="apellidos" class="control-label">Apellidos <span class="required">*</span></label>
           <div>
             <input class="form-control" id="apellidos" name="apellidos" type="text" data-required data-lastname/>
           </div>
@@ -33,9 +33,9 @@
         </div>
 
         <div  class="form-group">
-          <label for="repetir-contrasena" class="control-label">Repetir contraseña <span class="required">*</span></label>
+          <label for="repetir_contrasena" class="control-label">Repetir contraseña <span class="required">*</span></label>
           <div>
-            <input class="form-control" type="password" name="repetir-contrasena" data-required data-password data-samepassword/>
+            <input class="form-control" type="password" name="repetir_contrasena" data-required data-password data-samepassword/>
           </div>
         </div>
 
