--- a/admin/views/producto-edit.html
+++ b/admin/views/producto-edit.html
@@ -4,30 +4,31 @@
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h3>Producto</h3>
+                <h1>Producto</h1>
               </header>
               <div class="panel-body">
-                <form id="" class="form-horizontal form-label-left" onsubmit="return validate()" data-validate>
+                <form method="post" class="form-horizontal form-label-left" onsubmit="return validate()" data-validate>
                   <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
+
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img id="image-file" src="../img/200x200.png" alt="category" class="img-thumbnail">
+                          <img id="image-file" src="../img/200x200.png" alt="producto" data-image>
                         </div>
                       </div>
                     </div>
-                    <div class="form-group">
-                      <label class="control-label col-md-4 col-sm-4 col-xs-12" for="image">
-                      </label>
-                      <div class="col-md-7 col-sm-7 col-xs-12">
+                    <div class="row form-group">
+                      <div class="col-md-6 col-md-offset-3">
+                        <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label></label>
                         <input type="file" id="image" name="image" class="form-control col-md-7 col-xs-12 btn" accept="image/jpg,image/png" data-image/>
                       </div>
                     </div>
+
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="codigo">Código <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="text" id="code" name="codigo" class="form-control col-md-7 col-xs-12" data-required data-code value="{{codigo}}" />
+                        <input type="text" id="codigo" name="codigo" class="form-control col-md-7 col-xs-12" data-required data-code value="{{codigo}}" />
                       </div>
                     </div>
                     <div class="form-group">
@@ -39,8 +40,7 @@
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="tallas">Tallas <span class="required">*</span>
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="tallas">Tallas <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-6 col-xs-12">
                         <div class="checkbox">
                           <label>
@@ -97,15 +97,13 @@
                   </div>
                   <div class="col-lg-8 col-md-7 col-sm-6 col-xs-12"> 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="nombre">Nombre <span class="required">*</span>
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="nombre">Nombre <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <input type="text" id="nombre" name="nombre" class="form-control col-md-7 col-xs-12" data-required data-name value="{{nombre}}"/>
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="subcategoria">Subcategoría <span class="required">*</span>
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="subcategoria">Subcategoría <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="subcategoria" name="subcategoria" class="form-control col-md-7 col-xs-12" data-required>
                           <option value="">Seleccione</option>
@@ -116,7 +114,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="descripcion">Description
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="descripcion">Descripcion
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                           <textarea id="descripcion" name="descripcion" class="form-control col-md-7 col-xs-12" rows="3"  data-required data-description>{{descripcion}}</textarea>
@@ -124,8 +122,7 @@
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="color">Color <span class="required">*</span>
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="color">Color <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="color" name="color" class="form-control col-md-7 col-xs-12" multiple data-required>
                           <option value="">Seleccione</option>
@@ -137,32 +134,28 @@
                     </div>
               
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="material">Material 
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="material">Material</label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="text" id="material" name="material" class="form-control col-md-7 col-xs-12" data-required data-code value="{{material}}"/>
+                        <input type="text" id="material" name="material" class="form-control col-md-7 col-xs-12" value="{{material}}"/>
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="marca">Marca <span class="required">*</span>
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="marca">Marca <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="text" id="marca" name="marca" class="form-control col-md-7 col-xs-12" data-required data-code value="{{marca}}"/>
+                        <input type="text" id="marca" name="marca" class="form-control col-md-7 col-xs-12" data-required value="{{marca}}"/>
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="altura">Altura 
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="altura">Altura</label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="number" id="altura" name="altura" class="form-control col-md-7 col-xs-12" data-required data-code value="{{altura}}"/>
+                        <input type="number" id="altura" name="altura" class="form-control col-md-7 col-xs-12" value="{{altura}}"/>
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="precio">Precio <span class="required">*</span>
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="precio">Precio <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <input type="number" id="precio" name="precio" min="0" step="0.5" class="form-control col-md-7 col-xs-12" data-required data-money value="{{precio}}" />
                       </div>
@@ -178,8 +171,8 @@
 
                     <div class="form-group">
                       <div class="col-md-6 col-xs-12 col-md-offset-3">
-                        <button type="submit" class="btn btn-green">Submit</button>
-                        <button type="button" class="btn btn-red">Cancel</button>
+                        <button type="submit" class="btn btn-show"><i class="fa fa-check"></i> Guardar</button>
+                        <button type="button" class="btn btn-red"><i class="fa fa-ban"></i> Cancel</button>
                       </div>
                     </div>
                   </div>
