--- a/admin/views/footer.html
+++ b/admin/views/footer.html
@@ -1,11 +1,11 @@
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
-  <script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.11.2.js"><\/script>')</script>
+<script   src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
+    
 
   <script src="../js/bootstrap.js"></script>
   <script src="../js/chart.min.js"></script>
   <script src="../js/bootstrap-progressbar.min.js"></script>
-  <script src="../js/jquery.nicescroll.min.js"></script>
-  <script src="../js/bootstrap-datetimepicker.js"></script>
+  <script src="../js/jquery.nicescroll.min.js"></script><!--
+  <script src="../js/bootstrap-datetimepicker.js"></script>-->
   <script src="../js/validator.js"></script>
   <script src="../js/scripts-admin.js"></script>
   </body>
