validaciones en categorías, agregar campo categoría a producto y quitar descripcion

--- a/admin/views/categorias.html
+++ b/admin/views/categorias.html
@@ -5,13 +5,13 @@
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h3>Categorias</h3>
+                <h1>Categorias</h1>
                 <div class="pull-right">
                   <ul class="files">
-                    <li><button class="btn btn-dark" title="CVS"><i class="fa fa-file-text-o"></i></button></li>
-                    <li><button class="btn btn-dark" title="Excel"><i class="fa fa-file-excel-o" ></i></button></li>
-                    <li><button class="btn btn-dark" title="PDF"><i class="fa fa-file-pdf-o"></i></button></li>
-                    <li><button class="btn btn-dark" title="Print"><i class="fa fa-print"></i></button></li>
+                    <li><button class="btn btn-red" title="CVS"><i class="fa fa-file-text-o"></i></button></li>
+                    <li><button class="btn btn-red" title="Excel"><i class="fa fa-file-excel-o" ></i></button></li>
+                    <li><button class="btn btn-red" title="PDF"><i class="fa fa-file-pdf-o"></i></button></li>
+                    <li><button class="btn btn-red" title="Print"><i class="fa fa-print"></i></button></li>
                   </ul>
                 </div>
               </header>
@@ -44,9 +44,9 @@
                       <td>{{nombre}}</td>
                       <td>{{descripcion}}</td>
                       <td>
-                        <a href="{{categoria-view}}"><i class="fa fa-eye"></i></a>
-                        <a href="{{categoria-edit}}"><i class="fa fa-pencil"></i></a>
-                        <a href="#" id="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
+                        <a href="{{categoria-view}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
+                        <a href="{{categoria-edit}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
+                        <a href="#" class="btn btn-delete" id="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
                       </td>
                     </tr>
                     <!--.row-->
