--- a/admin/views/producto-edit.html
+++ b/admin/views/producto-edit.html
@@ -103,13 +103,24 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="subcategoria">Subcategoría <span class="required">*</span></label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="categoria">Categoría <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <select id="subcategoria" name="subcategoria" class="form-control col-md-7 col-xs-12" data-required>
+                        <select id="categoria" name="categoria" class="form-control col-md-7 col-xs-12" data-required>
                           <option value="">Seleccione</option>
                           <option value="dama">Dama</option>
                           <option value="caballero">Caballero</option>
                           <option value="infantil">Infantil</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="subcategoria">Subcategoría <span class="required">*</span></label>
+                      <div class="col-md-6 col-sm-12 col-xs-12">
+                        <select id="subcategoria" name="subcategoria" class="form-control col-md-7 col-xs-12" data-required>
+                          <option value="">Seleccione</option>
+                          <option value="zapatilla">Zapatilla</option>
+                          <option value="bota">Bota</option>
+                          <option value="deportivo">Deportivo</option>
                         </select>
                       </div>
                     </div>
