--- a/admin/views/categoria-edit.html
+++ b/admin/views/categoria-edit.html
@@ -4,53 +4,48 @@
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h3>Categoria</h3>
+                <h1>Categoria</h1>
               </header>
               <div class="panel-body">
-                <form id="" class="form-horizontal form-label-left" action="{{action}}" method="post" onsubmit="return validate()" enctype="multipart/form-data" data-validate>
+                <form method="post" class="form-horizontal form-label-left" action="{{action}}" onsubmit="return validate()" enctype="multipart/form-data" data-validate>
                   <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img id="image-file" src="../img/200x200.png" alt="categoria" class="img-thumbnail">
+                          <img id="image-file" src="../img/200x200.png" alt="categoria" data-image>
                         </div>
                       </div>
                     </div>
-                    <div class="form-group">
-                      <label class="control-label col-md-4 col-sm-4 col-xs-12" for="image">Image
-                      </label>
-                      <div class="col-md-7 col-sm-7 col-xs-12">
-                        <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png" data-required  data-image/>
-                      </div>
+                    <div class="col-md-6 col-md-offset-3">
+                      <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label>
+                      <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png" data-required  data-image/>
                     </div>
                   </div>
 
                   <div class="col-lg-8 col-md-7 col-sm-6 col-xs-12"> 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="codigo">Code <span class="required">*</span>
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="codigo">Código <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <input type="text" id="codigo" name="codigo" class="form-control col-md-7 col-xs-12" data-required data-code value="{{codigo}}" />
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="nombre">Name <span class="required">*</span>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="nombre">Nombre <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <input type="text" id="nombre" name="nombre" class="form-control col-md-7 col-xs-12" data-required data-name value="{{nombre}}" />
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="descripcion">Description <span class="required">*</span>
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="descripcion">Description </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <textarea id="descripcion" name="descripcion" class="form-control col-md-7 col-sm-12 col-xs-12" class="form-control" rows="3" data-required data-description> {{descripcion}}</textarea>
+                        <textarea id="descripcion" name="descripcion" class="form-control col-md-7 col-sm-12 col-xs-12" class="form-control" rows="3" data-description> {{descripcion}}</textarea>
                       </div>
                     </div>
                     <div class="form-group">
-                      <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                        <button type="submit" class="btn btn-green">Submit</button>
-                        <button type="button" class="btn btn-red">Cancel</button>
+                      <div class="col-md-6 col-xs-12 col-md-offset-3">
+                        <button type="submit" class="btn btn-show"><i class="fa fa-check"></i> Guardar</button>
+                        <button type="button" class="btn btn-red"><i class="fa fa-ban"></i> Cancel</button>
                       </div>
                     </div>
                   </div>
