--- a/admin/views/categoria-view.html
+++ b/admin/views/categoria-view.html
@@ -5,7 +5,7 @@
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h3>Categoria</h3>
+                <h1>Categoria</h1>
               </header>
               <div class="panel-body">
                 <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
@@ -40,9 +40,9 @@
                         <tr>
                           <th scope="row">Acción </th>
                           <td class=" last">
-                            <a href="{{categoria-view}}" class="btn btn-green btn-xs"><i class="fa fa-eye"></i> Ver </a>
-                            <a href="{{categoria-edit}}" class="btn btn-yellow btn-xs"><i class="fa fa-pencil"></i> Editar </a>
-                            <a href="#" id="{{id}}" data-toggle="modal" data-target="#delete-item" class="btn-delete-category btn btn-red btn-xs"> <i class="fa fa-eraser"></i> Eliminar </a>
+                            <a href="{{categoria-view}}" class="btn btn-show"><i class="fa fa-eye"></i> Ver </a>
+                            <a href="{{categoria-edit}}" class="btn btn-edit"><i class="fa fa-pencil"></i> Editar </a>
+                            <a href="#" id="{{id}}" data-toggle="modal" data-target="#delete-item" class="btn btn-delete"> <i class="fa fa-eraser"></i> Eliminar </a>
                           </td>
                         </tr>
                       </tbody>
