--- a/admin/views/subcategoria-view.html
+++ b/admin/views/subcategoria-view.html
@@ -4,14 +4,14 @@
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h3>Subcategoria</h3>
+                <h1>Subcategoria</h1>
               </header>
               <div class="panel-body">
                 <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img src="../img/200x200.png" alt="category" class="img-thumbnail">
+                          <img src="../img/200x200.png" alt="subcategoria" class="img-thumbnail">
                         </div>
                       </div>
                     </div>
@@ -43,9 +43,9 @@
                         <tr>
                           <th scope="row">Acción </th>
                           <td class="last">
-                            <a href="{{subcategoria-view}}" class="btn btn-green btn-xs"><i class="fa fa-eye"></i> Ver </a>
-                            <a href="{{subcategoria-edit}}" class="btn btn-yellow btn-xs"><i class="fa fa-pencil"></i> Editar </a>
-                            <a href="#" id="{{id}}" data-toggle="modal" data-target="#delete-item" class="btn-delete-category btn btn-red btn-xs"> <i class="fa fa-eraser"></i> Eliminar </a>
+                            <a href="{{subcategoria-view}}" class="btn btn-show"><i class="fa fa-eye"></i> Ver </a>
+                            <a href="{{subcategoria-edit}}" class="btn btn-edit"><i class="fa fa-pencil"></i> Editar </a>
+                            <a href="#" id="{{id}}" data-toggle="modal" data-target="#delete-item" class="btn btn-delete"> <i class="fa fa-eraser"></i> Eliminar </a>
                           </td>
                         </tr>
                       </tbody>
