--- a/admin/views/usuario-edit.html
+++ b/admin/views/usuario-edit.html
@@ -12,7 +12,7 @@
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img id="thumbnail-file" src="../img/200x200.png" alt="thumbnail" data-thumbnail>
+                          <img id="thumbnail-file" src="../img/200x200.png" alt="usuario" data-thumbnail>
                         </div>
                       </div>
                     </div>
@@ -82,10 +82,10 @@
                       </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-6 col-xs-12 col-md-offset-3">
-                          <button type="submit" class="btn btn-show"><i class="fa fa-check"></i> Guardar</button>
-                          <button type="button" class="btn btn-red"><i class="fa fa-ban"></i> Cancel</button>
-                        </div>
+                      <div class="col-md-6 col-xs-12 col-md-offset-3">
+                        <button type="submit" class="btn btn-show"><i class="fa fa-check"></i> Guardar</button>
+                        <button type="button" class="btn btn-red"><i class="fa fa-ban"></i> Cancel</button>
+                      </div>
                     </div>
                   </div>
                 </form>
